# django-advanced-report-builder

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: publish.yml  ruff.yml  tests.yml
advanced_report_builder/: admin.py  apps.py  checkbox.py  column_types.py  columns.py  customise.py  duplicate.py  exceptions.py  field_extensions.py  field_types.py  field_utils.py  filter_query.py  form_utils.py  forms.py  generate_series.py  globals.py  includes.py  models.py  nl_prompt.py  nl_report_factory.py  record_nav.py  report_builder.py  signals.py  template_types.py  toggle.py  urls.py  utils.py  variable_date.py  view_types.py  widgets.py
advanced_report_builder/data_merge/: data_merge.py  mixin.py  utils.py  widget.py
advanced_report_builder/views/: calendar.py  (+20 more)
django_examples/: manage.py  setup.py
docs/: custom-columns.md  dashboards.md  field-extensions.md  filters-and-queries.md  index.md  installation.md  model-configuration.md  quickstart.md  record-nav.md  report-types.md  settings.md  targets.md
report_builder/: __init__.py  admin.py  apps.py  columns.py  customise.py  field_types.py  filter_query.py  forms.py  globals.py  html_include.py  includes.py  models.py  report_builder.py  urls.py  utils.py  variable_date.py
tests/: conftest.py  pyproject.toml  run_tests.py  test_chart_reports.py  test_dashboards.py  test_denominator_query.py  test_navigation.py  test_query_builder.py  test_reports_index.py  test_single_value_reports.py  test_table_reports.py
(+248 files in other folders)
