[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-advanced-report-builder"
version = "1.1.1"
description = "Django app that allows you to build reports from modals"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
    { name = "Thomas Turner" }
]

dependencies = [
    "Django >= 3.2",
    "django-filtered-datatables >= 0.0.21",
    "django-ajax-helpers >= 0.0.20",
    "django-nested-modals >= 0.0.21",
    "time-stamped-model >= 0.2.3",
    "date-offset >= 0.0.2",
    "expression-builder >= 0.0.12",
]

[project.urls]
Homepage = "https://github.com/django-advance-utils/django-advanced-report-builder"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["advanced_report_builder*"]